Opened 9 years ago

Closed 9 years ago

#12832 closed bug (fixed)

[Patch] JobSetupWindow.cpp: fix clang warning

Reported by: mt Owned by: phoudoin
Priority: normal Milestone: Unscheduled
Component: Drivers/Printers Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Since 'lastPage' is int32, use INT32_MAX instead of LONG_MAX.

/home/haiku/haiku/haiku/src/add-ons/print/drivers/preview/JobSetupWindow.cpp:45:45: warning: comparison of constant 9223372036854775807 with expression of type 'int32' (aka 'int') is always false [-Wtautological-constant-out-of-range-compare]
        bool allPages = firstPage == 1 && lastPage == LONG_MAX;
                                          ~~~~~~~~ ^  ~~~~~~~~

Attachments (1)

0020-JobSetupWindow.cpp-fix-clang-warning.patch (1.0 KB ) - added by mt 9 years ago.

Download all attachments as: .zip

Change History (3)

comment:1 by mt, 9 years ago

patch: 01

comment:2 by pulkomandy, 9 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev50402.

Note: See TracTickets for help on using tickets.